src/test/deca/context/valid/test_class_cast.deca
// Description:
//    Teste l'appel de méthode et le cast d'un float vers un entier.
//
// Resultats:
//    Les coordonnées de b avant réinitialisation sont: 5|1.05000e+01|20
//    Les coordonnées entières de b avant réinitialisation sont: 5|10|20
//    Les coordonnées de b après réinitialisation sont: 0|0.00000e+00|0
//
// Historique:
//    cree le 21/01/2023
class A {
    int x;
    float y;

    void init (){
        x = 0;
        y = 0.0;
    }
    void setY(float y){
        this.y = y;
    }

    void setX(int x){
        this.x = x;
    }

    int getX(){
        return x;
    }

    float getY(){
        return y;
    }
}

class B extends A{
    int z;

    void init (){
        x = 0;
        y = 0.0;
        z = 0;
    }

    void setZ(int z){
        this.z = z;
    }

    int getZ(){
        return z;
    }
}

{
B b = new B();
b.setX(5);
b.setY(10.5);
b.setZ(20);
println("Les coordonnées de b avant réinitialisation sont: ", b.getX(),"|", b.getY(),"|", b.getZ());
println("Les coordonnées entières de b avant réinitialisation sont: ", b.getX(),"|", (int)(b.getY()),"|", b.getZ());
b.init();
println("Les coordonnées de b après réinitialisation sont: ", b.getX(),"|", b.getY(),"|", b.getZ());

}